--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dela+Gothic+One:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TNhCo9"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TNhCo9" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=x9Mf5g"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=x9Mf5g" type="text/css">
 
   
   
@@ -72,13 +72,13 @@
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-9">
         <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Jack Segil</strong></h1>
-        <p class="mbr-text mbr-fonts-style mb-4 display-7">Unprofessional Tinkerer and Aspiring College Student</p>
+        <p class="mbr-text mbr-fonts-style mb-4 display-7">Amateur Tinkerer and Aspiring College Student</p>
         
       </div>
     </div>
 
     <div class="row mt-5 justify-content-center">
-      <div class="mbr-figure col-12 col-md-12"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/rC41a8PRwlE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=rC41a8PRwlE" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+      <div class="mbr-figure col-12 col-md-12"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/oznr-1-poSU?rel=0&amp;amp;&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
     </div>
   </div>
 </section>
@@ -157,7 +157,7 @@
         <div class="card-wrapper">
           <div class="row">
             <div class="col-12 col-md-12 col-lg-5 image-wrapper">
-              <img class="w-100" src="assets/images/me-1.png" alt="Mobirise Website Builder">
+              <img class="w-100" src="assets/images/img-7510.jpeg" alt="Mobirise Website Builder">
             </div>
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
@@ -223,7 +223,7 @@
             </div>
         </div>
     </div>
-</section>
+
   
 </body>
 </html>
