--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dela+Gothic+One:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=3wPDC7"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=3wPDC7" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aZ8fYb"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aZ8fYb" type="text/css">
 
   
   
@@ -121,7 +121,7 @@
             <h5 class="mbr-card-title card-title2 mbr-fonts-style align-left mb-2 display-5">Heistday: Infiltration</h5>
             
             <p class="card-text2 mbr-fonts-style align-left mb-3 display-7">A heist game I've been working on in the Unity Game Engine for about 4 years.</p>
-            <div class="mbr-section-btn btn-section align-left content-footer"><a class="btn article-btn btn-white-outline display-7" href="https://mobiri.se">watch the demo (coming soon)<strong></strong></a></div>
+            <div class="mbr-section-btn btn-section align-left content-footer"><a class="btn article-btn btn-white-outline display-7" href="https://drive.google.com/file/d/1swNBS2Hn_vYv5FwnF5LHLgQnKqjRp_2a/view?usp=sharing">watch the demo<strong></strong></a></div>
           </div>
         </div>
       </div>
