--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dela+Gothic+One:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Golos+Text:400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=qI04V1"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=qI04V1" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=a5FWlT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=a5FWlT" type="text/css">
 
   
   
