--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="text-wrapper align-left">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>About me</strong></h1>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">Hi! I'm Jack Segil, a freshman studying Computer Science at the University of Chicago. I'm really into coding, and I do some cool things with it! I run a charity, work on games, and live to learn!</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-info display-7" href="mailto:jsegil@uchicago.edu">contact me</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-info display-7" href="index.html#contacts01-5">contact me</a></div>
               </div>
             </div>
           </div>
