--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-9">
         <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Jack Segil</strong></h1>
-        <p class="mbr-text mbr-fonts-style mb-4 display-7">Amateur Tinkerer and Aspiring College Student</p>
+        <p class="mbr-text mbr-fonts-style mb-4 display-7">Professional Tinkerer and Amateur College Student</p>
         
       </div>
     </div>
